fix rule for #inlinePdfResizer to make sure it is not too small vertically

--- a/plugins/themes/arkiv/arkiv.css
+++ b/plugins/themes/arkiv/arkiv.css
@@ -1330,6 +1330,5 @@ hr {
 
 /* MISC */
 #inlinePdfResizer {
-	height: auto;
-	min-height: 400px;
+	min-height: 600px;
 }
