--- a/plugins/themes/fleks/fleks.css
+++ b/plugins/themes/fleks/fleks.css
@@ -1342,6 +1342,5 @@ hr {
 
 /* MISC */
 #inlinePdfResizer {
-	height: auto;
-	min-height: 400px;
+	min-height: 600px;
 }
