--- a/plugins/themes/formakademisk/formakademisk.css
+++ b/plugins/themes/formakademisk/formakademisk.css
@@ -651,6 +651,5 @@ a.pdf:hover {
 
 /* MISC */
 #inlinePdfResizer {
-	height: auto;
-	min-height: 400px;
+	min-height: 600px;
 }
