--- a/plugins/themes/hioaSiteIndex/hioaSiteIndex.css
+++ b/plugins/themes/hioaSiteIndex/hioaSiteIndex.css
@@ -454,6 +454,5 @@ body {
 
 /* MISC */
 #inlinePdfResizer {
-	height: auto;
-	min-height: 400px;
+	min-height: 600px;
 }
