--- a/plugins/themes/information/information.css
+++ b/plugins/themes/information/information.css
@@ -1340,6 +1340,5 @@ hr {
 
 /* MISC */
 #inlinePdfResizer {
-	height: auto;
-	min-height: 400px;
+	min-height: 600px;
 }
