--- a/plugins/themes/nbf/nbf.css
+++ b/plugins/themes/nbf/nbf.css
@@ -1560,6 +1560,5 @@ hr {
 /* MISC */
 
 #inlinePdfResizer {
-	height: auto;
-	min-height: 400px;
+	min-height: 600px;
 }
