--- a/plugins/themes/rerm/rerm.css
+++ b/plugins/themes/rerm/rerm.css
@@ -1324,6 +1324,5 @@ hr {
 
 /* MISC */
 #inlinePdfResizer {
-	height: auto;
-	min-height: 400px;
+	min-height: 600px;
 }
