--- a/plugins/themes/techne/techne.css
+++ b/plugins/themes/techne/techne.css
@@ -1313,6 +1313,5 @@ hr {
 
 /* MISC */
 #inlinePdfResizer {
-	height: auto;
-	min-height: 400px;
+	min-height: 600px;
 }
